big refactor of extension

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,65 +1,39 @@
 {
-	"ol_updateInterval":{"message":"Update Interval"},
-	"oo_updateInterval60000":{"message":"1 minute"},
-	"oo_updateInterval300000":{"message":"5 minutes"},
-	"oo_updateInterval600000":{"message":"10 minutes"},
-	"oo_updateInterval900000":{"message":"15 minutes"},
-	"oo_updateInterval1800000":{"message":"30 minutes"},
-	"oo_updateInterval3600000":{"message":"1 hour"},
-	"ol_descSpeed":{"message":"Description Scroll Speed"},
-	"ol_notifications":{"message":"Send Desktop Notifications"},
-	"ol_showNSFW":{"message":"Show Adult streams"},
-	"ol_showGaming":{"message":"Show Gaming streams"},
-	"ol_volume":{"message":"Alert volume"},
-	"ol_fireOnWake":{"message":"Get Streams on Wake"},
-	"ol_theme":{"message":"Theme"},
-	"oo_themeSystem":{"message":"System Default"},
-	"oo_themeLight":{"message":"Light Theme"},
-	"oo_themeDark":{"message":"Dark Theme"},
-	"ol_mergeSameName":{"message":"Merge across all sources"},
-	"ol_youtube":{"message":"Youtube"},
-	"ol_picarto":{"message":"Picarto"},
-	"ol_piczel":{"message":"Piczel"},
-	"ol_twitch":{"message":"Twitch"},
-    "ob_resetOptions":{"message":"Reset\u00a0settings"},
-	"ob_resetAccounts":{"message":"Reset\u00a0accounts"},
-	"ob_logout":{"message":"Log\u00a0out"},
-	"ob_login":{"message":"Log\u00a0in"},
-	"ob_cookie":{"message":"Find Cookies"},
-	"om_testing":{"message":"Testing connection..."},
-	"om_error":{"message":"An error occurred."},
-	"om_testingfailed":{"message":"Could not fetch account name! Please login again."},
-	"ol_SignedIn":{"message":"Signed in as [$username$]","placeholders":{"username":{"content":"$1"}}},
-	"ol_accountAddSelect":{"message":"Account Type"},
-	"ol_OAuth2PKCE":{"message": "Click 'Connect' to grant this extension access."},
-	"om_OAuth2PKCEauthfail":{"message":"Error: Could not fetch authentication data from $service$.\nPlease try again.","placeholders":{"service":{"content":"$1"}}},
-	"ol_cookieAuth":{"message":"Click [here](https://piczel.tv/login) to login. While logged in, click 'Connect' to grant this extension access."},
-	"om_cookieAuthfail":{"message":"Error: Could not fetch cookie data.\nPlease make sure you're logged into $service$ first!\n(Hint: Click the icon image to open the website in a new tab!)","placeholders":{"service":{"content":"$1"}}},
-	"om_deleteAllModal":{"message":"WARNING! This will delete all Saved Data for this extension, including all Account Information and all Global Settings! Are you sure?"},
-	"om_resetOptionsModal":{"message":"This will reset all Global Options for this extension. Are you sure?"},
-	"om_deleteAccountsModal":{"message":"This will remove all Account Information for this extension. Are you sure?"},
-	"om_deleteAccountModal":{"message":"Are you sure you want to delete this $service$ Account for $username$?","placeholders":{"service":{"content":"$1"},"username":{"content":"$2"}}},
-	"om_deleteDisconnectedAccountModal":{"message":"Are you sure you want to delete this disconnected $service$ Account?","placeholders":{"service":{"content":"$1"}}},
-	"ob_modalOk":{"message":"Ok"},
-	"ob_modalClose":{"message":"Close"},
-	"ob_modalCancel":{"message":"Cancel"},
-	"ob_modalClearAll":{"message":"Delete All"},
-	"ob_modalClearAllData":{"message":"Clear All Saved Data"},
-	"ob_modalClearOptions":{"message":"Reset Options"},
-	"ob_modalClearAccounts":{"message":"Remove All Accounts"},
-	"oh_accounts":{"message":"Connected Accounts"},
-	"oh_options":{"message":"Global Options"},
-	"oh_accountsAdd":{"message":"Add New $service$ Account","placeholders":{"service":{"content":"$1"}}},
-	"oh_accountsEdit":{"message":"Edit $service$ Account","placeholders":{"service":{"content":"$1"}}},
-	"oh_accountRemove":{"message":"Remove $service$ Account", "placeholders":{"service":{"content":"$1"}}},
-	"ob_accountsCreate":{"message":"Connect"},
-	"ob_accountEdit":{"message":"Edit"},
-	"ob_accountRemove":{"message":"Remove"},
-	"ob_accountFix":{"message":"Reconnect"},
-	"ob_accountsAdd":{"message":"+ Add Account"},
-	"oh_accountName":{"message":"Connected to $service$ as $username$","placeholders":{"service":{"content":"$1"},"username":{"content":"$2"}}},
-	"oh_accountNameMissing":{"message":"Unauthenticated $service$ connection","placeholders":{"service":{"content":"$1"}}},
-	"pl_currentStreaming":{"message":"$streaming$ People Streaming", "placeholders":{"streaming":{"content":"$1"}}},
-	"pl_singleStreaming":{"message":"$streaming$ Person Streaming", "placeholders":{"streaming":{"content":"$1"}}},
-	"pl_currentErrors":{"message":"$errors$ Account Error(s)", "placeholders":{"errors":{"content":"$1"}}}
+	"updateInterval":{"message":"Update Interval"},
+	"updateInterval60000":{"message":"1 minute"},
+	"updateInterval300000":{"message":"5 minutes"},
+	"updateInterval600000":{"message":"10 minutes"},
+	"updateInterval900000":{"message":"15 minutes"},
+	"updateInterval1800000":{"message":"30 minutes"},
+	"updateInterval3600000":{"message":"1 hour"},
+	"descSpeed":{"message":"Description Scroll\u00a0Speed"},
+	"notifications":{"message":"Send Desktop Notifications"},
+	"theme":{"message":"Theme"},
+	"themeSystem":{"message":"System Default"},
+	"themeLight":{"message":"Light Theme"},
+	"themeDark":{"message":"Dark Theme"},
+	"youtube":{"message":"Youtube"},
+	"picarto":{"message":"Picarto"},
+	"piczel":{"message":"Piczel"},
+	"twitch":{"message":"Twitch"},
+    "resetOptions":{"message":"Reset\u00a0settings"},
+	"resetAccounts":{"message":"Reset\u00a0accounts"},
+	"error":{"message":"An error occurred."},
+	"deleteAllModal":{"message":"WARNING! This will delete all Saved Data for this extension, including all Account Information and all Global Settings! Are you sure?"},
+	"resetOptionsModal":{"message":"This will reset all Global Options for this extension. Are you sure?"},
+	"deleteAccountsModal":{"message":"This will remove all Account Information for this extension. Are you sure?"},
+	"deleteAccountModal":{"message":"Are you sure you want to delete this $service$ Account for $username$?","placeholders":{"service":{"content":"$1"},"username":{"content":"$2"}}},
+	"ok":{"message":"Ok"},
+	"close":{"message":"Close"},
+	"cancel":{"message":"Cancel"},
+	"clearAllData":{"message":"Clear All Saved Data"},
+	"clearOptions":{"message":"Reset Options"},
+	"clearAccounts":{"message":"Remove All Accounts"},
+	"accounts":{"message":"Connected Accounts"},
+	"options":{"message":"Global Options"},
+	"accountsAdd":{"message":"+ Add Account"},
+	"currentStream":{"message":"$streaming$ Person Streaming", "placeholders":{"streaming":{"content":"$1"}}},
+	"currentStreams":{"message":"$streaming$ People Streaming", "placeholders":{"streaming":{"content":"$1"}}},
+	"currentError":{"message":"$errors$ Account Error", "placeholders":{"errors":{"content":"$1"}}},
+	"currentErrors":{"message":"$errors$ Account Errors", "placeholders":{"errors":{"content":"$1"}}}
 }
