add consolidating multiple notifications so the user doesn't get annoyed by pings

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -8,6 +8,7 @@
 	"updateInterval3600000":{"message":"1 hour"},
 	"descSpeed":{"message":"Description Scroll\u00a0Speed"},
 	"notifications":{"message":"Send Desktop Notifications"},
+	"consolidate":{"message":"Combine Multiple Notifications"},
 	"theme":{"message":"Theme"},
 	"themeSystem":{"message":"System Default"},
 	"themeLight":{"message":"Light Theme"},
