--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -8,13 +8,14 @@
 	"updateInterval3600000":{"message":"1 hour"},
 	"descSpeed":{"message":"Description Scroll\u00a0Speed"},
 	"notifications":{"message":"Send Desktop Notifications"},
-	"consolidate":{"message":"Group Notifications with more than"},
-	"consolidate0":{"message":"Disabled"},
-	"consolidate1":{"message":"1 Stream"},
-	"consolidate2":{"message":"2 Streams"},
-	"consolidate3":{"message":"3 Streams"},
-	"consolidate4":{"message":"4 Streams"},
-	"consolidate5":{"message":"5 Streams"},
+	"groupNotif":{"message":"Group Notifications with more than"},
+	"groupNotif0":{"message":"Disabled"},
+	"groupNotif1":{"message":"1 Stream"},
+	"groupNotif2":{"message":"2 Streams"},
+	"groupNotif3":{"message":"3 Streams"},
+	"groupNotif4":{"message":"4 Streams"},
+	"groupNotif5":{"message":"5 Streams"},
+	"groupStreams":{"message":"Group Streams by Streamer name"},
 	"hideZero":{"message":"Hide Badge if no Streams"},
 	"theme":{"message":"Theme"},
 	"themeSystem":{"message":"System Default"},
