update notification logic
update notification logic to ignore old cache updates.
supports multiple streams in 1 notification, but is kinda janky.
hopefully have fixed instances where the background update alarm never gets created.
bugfixes.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -44,5 +44,7 @@
 	"currentStream":{"message":"$streaming$ Person Streaming", "placeholders":{"streaming":{"content":"$1"}}},
 	"currentStreams":{"message":"$streaming$ People Streaming", "placeholders":{"streaming":{"content":"$1"}}},
 	"currentError":{"message":"$errors$ Account Error", "placeholders":{"errors":{"content":"$1"}}},
-	"currentErrors":{"message":"$errors$ Account Errors", "placeholders":{"errors":{"content":"$1"}}}
+	"currentErrors":{"message":"$errors$ Account Errors", "placeholders":{"errors":{"content":"$1"}}},
+	"notificationsTitle":{"message":"Multiple New Streams!"},
+	"notificationsDesc":{"message":"Open Extension for details"}
 }
